--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,8 @@ exportClasses(MicroRNAGene)
 exportClasses(PiwiInteractingRNA)
 exportClasses(RibosomalRNA)
 exportClasses(SmallNuclearRNA)
+importFrom(Biostrings,AAString)
+importFrom(Biostrings,RNAString)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
 importFrom(S4Vectors,Rle)
